BBB-323 fixed upload photo image size on mobile

--- a/src/main/resources/assets/sass/_provide-photo-box.scss
+++ b/src/main/resources/assets/sass/_provide-photo-box.scss
@@ -22,11 +22,11 @@
   }
 
   &__image {
-    width: 100%;
+    width: 50%;
     height: auto;
 
     @include govuk-media-query($from: tablet) {
-      max-width: 175px;
+      width: 175px;
     }
   }
 }
